_sass/jekyll_cmdbrew/components/_photos.scss
.photos {
  .photo-wrap {
    padding: map-get($spacers, 1);
  }

  .photo {
    @extend %background-cover;
    display: block;
    padding: 0;
    margin-bottom: 0;
    background-color: $light;

    &::before {
      display: block;
      padding-top: 100%;
      content: '';
    }
  }

  .placeholder {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    padding: $spacer;
    color: $secondary;
    text-align: center;
    transform: translate(-50%, -50%);
  }
}

